# bashtion

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: release.yml
scripts/manual/: semantic_download.sh  semantic_reverse_shell.sh  static_curl_pipe.sh  static_eval.sh
src/: config.rs  error.rs  io.rs  lib.rs  logging.rs  main.rs  semantic.rs
src/static_analysis/: mod.rs  queries.rs
