[package]
name = "bashtion"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
streaming-iterator = "0.1"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
thiserror = "1"
